--- a/Editando Odont/html/sobre.html
+++ b/Editando Odont/html/sobre.html
@@ -11,9 +11,9 @@
 			<header class="header" id="cabecalho">
   					<a href="#default" class="logo"> <img src="..\img\logo.png" alt="Logo da Fodon"></a>
   				<div class="header-right">
-   		 			<a class="active" href="cabecalho.html">Home</a>
+   		 			<a href="cabecalho.html">Home</a>
     				<a href="triagem.html">Triagem</a>
-    				<a href="sobre.html">Sobre</a>
+    				<a class="active" href="sobre.html">Sobre</a>
     				<a href="#" style="font-size:30px;" class="icon" onclick="myFunction()">&#9776;</a>
   				</div>
 			</header>
