--- a/OdontoForm/html/triagem.html
+++ b/OdontoForm/html/triagem.html
@@ -14,13 +14,13 @@
   				<div class="header-right">
    		 			<a href="/">Home</a>
     				<a class="active" href="triagem">Triagem</a>
-    				<a href="sobre">Sobre</a>
+    				<a href="ocorrencias">Ocorrências</a>
     				<a href="#" style="font-size:30px;" class="icon" onclick="myFunction()">&#9776;</a>
   				</div>
 			</header>
 
 		<div class="container">
-		  <form action="/triagem" method="post">
+		  <form action="/ocorrencias" method="post">
 		    <div class="row">
 		      <div class="col-25">
 		        <label for="name">Nome:</label>
@@ -76,6 +76,7 @@
 		    </div>
 		    <div class="row">
 		      <input type="submit" value="Enviar">
+		      <a href="ocorrencias.html"></a>
 		    </div>
 		  </form>
 		</div>
