--- a/OdontoForm/html/ocorrencias.html
+++ b/OdontoForm/html/ocorrencias.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title>Triagem Odontológica</title>
+		<title>Odonto Form</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="..\css\style.css">
+		<link rel="stylesheet" href="..\css\style_form.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script type="text/javascript" src="javascript/functions.js"></script>
 	</head>
 	<body>
-		<!-- cabeçalho-->
 			<header class="header" id="cabecalho">
   					<a href="/" class="logo"> <img src="..\img\logo.png" alt="Logo da Fodon"></a>
   				<div class="header-right">
-   		 			<a class="active" href="/">Home</a>
+   		 			<a href="/">Home</a>
     				<a href="triagem">Triagem</a>
-    				<a href="ocorrencias">Ocorrências</a>
+    				<a class="active" href="ocorrencias">Ocorrências</a>
     				<a href="#" style="font-size:30px;" class="icon" onclick="myFunction()">&#9776;</a>
   				</div>
 			</header>
 
-			<!-- Div que controla a imagem de introducao-->
-		<div class="introducao">
-			<div class="informacoes">
-				<h1>Odonto Form</h1>
-			</div>
+		<div class="container">
 		</div>
-
-			<footer>
-				
-			</footer>
-
 	</body>
 </html>
